objects/ssot__CompliancePolicyVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeSummaryText__c</fullName>
        <label>Change Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompliancePolicyId__c</fullName>
        <label>Compliance Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Compliance Policy Version Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceDocumentsLink__c</fullName>
        <label>Reference Documents Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762650588_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicyVersion_CompliancePo_rel</label>
        <referenceTo>ssot__CompliancePolicy__dlm</referenceTo>
        <relationshipLabel>CompliancePolicyVersion_CompliancePo_rel</relationshipLabel>
        <relationshipName>rel_1752762650588_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>